fix(Inventory) set z-index on tax and discount divs

--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -1915,6 +1915,7 @@ textarea {
     padding:5px;
     position:absolute;
     background-color:#FFFFFF;
+	z-index: 100;
     display:none;
 }
 
