--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -2046,6 +2046,7 @@ textarea {
 	padding:5px;
 	position:absolute;
 	background-color:#FFFFFF;
+	z-index: 100;
 	display:none;
 }
 
